# verifiable-secret-sharing

./: Cargo.toml  README.md
paper/: feldmanVSS_review_cn.md  stadlerPVSS_review_cn.md
src/: feldman_vss.rs  lib.rs  secp256k1_helper.rs  simple_sss.rs
